--- a/style.css
+++ b/style.css
@@ -61,8 +61,29 @@
   -webkit-filter: grayscale(0%);
   filter: none;
   transition: 1s ease;
+  cursor: pointer;
 }
 .section p {
   margin: 150px;
   color: gray;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modal-content {
+  margin: auto;
+  display: block;
+  width: auto;
+  max-width: 80%;
+  max-height: 80%;
 }
