--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Imperial+Script&display=swap");
+@font-face {
+  font-family: "LovTony";
+  src: url("fonts/LovtonyRegular-YzV5O.ttf");
+}
 * {
   box-sizing: border-box;
   background-color: white;
@@ -41,11 +46,11 @@
   background-color: white;
   color: green;
 }
-.container {
+.section {
+  margin: 70px;
 }
 .gallery {
   width: 70vw;
-  margin: 70px;
   flex-wrap: wrap;
 }
 .gallery img {
@@ -63,8 +68,14 @@
   transition: 1s ease;
   cursor: pointer;
 }
+.section h2 {
+  font-family: "Lovtony", cursive;
+  font-size: 5rem;
+  margin: 70px;
+  margin-left: 200px;
+  color: rgb(93, 85, 82, 0.5);
+}
 .section p {
-  margin: 150px;
   color: gray;
 }
 
@@ -77,7 +88,7 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .modal-content {
@@ -86,4 +97,19 @@
   width: auto;
   max-width: 80%;
   max-height: 80%;
+}
+
+/* profile */
+
+.profile {
+  display: flex;
+  flex-direction: row;
+  width: 60%;
+}
+.profile img {
+  width: 400px;
+}
+.profile p {
+  margin-top: 100px;
+  font-size: 16px;
 }
